--- a/dada/extras/documentation/pod_source/FAQ-errors.pod
+++ b/dada/extras/documentation/pod_source/FAQ-errors.pod
@@ -428,6 +428,63 @@ Lockfiles that aren't removed and still have their filehandle open may because o
 
 I've found this to be true when Dada Mail is trying to load complex archive messages. If this is the case for you as well, you may want to play around with the, B<$MIME_OPTIMIZE> Config.pm variable.  
 
+=head2 CPAN Perl modules/conflicts
+
+B<Introduction:> 
+
+Dada Mail relies on specific Perl CPAN libraries that have a compiled version and a pure perl version. Usually, the compiled version is there as an option to enhance the speed of execution of the routines of the library itself. It's a good thing. 
+
+B<Problem:> 
+
+You cannot bundle the compiled version of these libraries within Dada Mail, because they need to be compiled specifically for the OS that Dada Mail will run on, and that list is very large. 
+
+B<Solution?> 
+
+At the moment, Dada Mail comes with a Pure Perl version of every CPAN Perl library module that it B<requires>. Here is the list: 
+
+=over
+
+=item * MIME::Base64
+
+=item * MIME::QuotedPrint
+
+=item * Data::Dumper
+
+=item * Digest
+
+=item * Digest::MD5
+
+=item * JSON
+
+=back
+
+So, if you do not have these modules installed - it's OK, Dada Mail comes with the pure perl version of them. 
+
+B<Problem With This Solution:> 
+
+The catch 22 to this is: if you HAVE these modules installed - and it's a really good chance you have at least one in the group installed, Dada Mail may produce an error saying basically, "I've got a newer/different/better version already! - whatcha doin'?!" 
+
+B<Solution to the Problem of the First Solution:> 
+
+To counteract this, the above modules will be included in Dada Mail, B<but> will not be active. This is done by appending, B<-remove_to_install> to the file name/directory of these perl library modules. To make them active, rename the module to not include, B<-remove_to_install>. 
+
+Examples: 
+
+=over
+
+=item Base64.pm-remove_to_install -> Base64.pm
+
+=item Data-remove_to_install -> Data
+
+(Note: Data is directory)
+
+=back
+
+These files/directories are located in the: B<dada/DADA/perllib> directory of the Dada Mail distribution. 
+
+If you can, install the compiled versions of these modules manually. If you can't/don't know how, rename the files as directed above. It's better to use the compiled version if you can. How to install these modules is a little over the pale of this particular document. 
+
+
 =head2  Data::Dumper object version 2.102 does not match $Data::Dumper::VERSION 2.121 at....
 
 B<Background:>
@@ -776,6 +833,73 @@ In the,
 
 directory of your installed Dada Mail, renamed the, C<HTTP> directory to something like, C<HTTP-bak> and this error should clear up.
 
+=head2 Assets w/URLS w/Query Strings break
+
+If you're trying to send a webpage with an image, javascript library or stylesheet with a query string ala: 
+
+ <script src="http://example.com/script.js?ver=1234" ></script> 
+
+The, "Send a Webpage" function of Dada Mail most likely won't understand what to do with this and most likely will ignore and remove the script, image or stylesheet.
+
+=head1 Dada Mail Templates
+
+=head2 The Bracket Problem
+
+Dada Mail's original templating system uses tags that looked a lot like this, 
+
+ [tag]
+
+A string, with no white space, surrounded by brackets. Dada Mail still supports these types of tags, but you can run into problems, particularly with email messages, where a part of your message may I<look> like a tag in Dada Mail and will be templated out - essentially to nothing. This has the problem of removing content from your message. 
+
+There's a few things you can do: 
+
+=over
+
+=item * Set, $TEMPLATE_SETTINGS->{oldstyle_backwards_compatibility} to, 0
+
+If you're using version 4 or higher of Dada Mail, in the config, find the $TEMPLATE_SETTINGS hashref: 
+
+ $TEMPLATE_SETTINGS ||= { 
+ 	oldstyle_backwards_compatibility => 1, 
+ };
+
+change, 1 to 0: 
+
+ $TEMPLATE_SETTINGS ||= { 
+ 	oldstyle_backwards_compatibility => 0, 
+} ;
+
+and no more problems. 
+
+It's suggested you I<only> do this if you are installing from scratch and not upgrading. If you are upgrading, make dead-sure you do not have any templates of any kind, since they will magically not work anymore. 
+
+See also: 
+
+http://dadamailproject.com/support/documentation-4_0_2/global_variables.pod.html#_template_settings
+
+=item * Don't use square brackets this way
+
+This advice is horrible advice, since you're having to deal with a deficiency of the program. We apologize. 
+
+=item * Use, <!-- tmpl_var LEFT_BRACKET ---> and, <!-- tmpl_var RIGHT_BRACKET --> 
+
+There's two template tags you can use in your email messages: 
+
+ <!-- tmpl_var LEFT_BRACKET --> 
+
+and, 
+
+ <!-- tmpl_var RIGHT_BRACKET --> 
+
+If you need to have a string in your message that looks like this: 
+
+ [looks_like_a_tag]
+
+you can write it out, like this: 
+
+ <!-- tmpl_var LEFT_BRACKET -->looks_like_a_tag<!-- tmpl_var RIGHT_BRACKET --> 
+
+And Dada Mail will replace those template tags, with left and right brackets, doing what you want to do. 
 
 
 
