s/Sending Preferences/Sending Options/ (and friends)

--- a/dada/extras/documentation/pod_source/FAQ-general.pod
+++ b/dada/extras/documentation/pod_source/FAQ-general.pod
@@ -790,7 +790,7 @@ HTML screens are control by the Config.pm variable, C<$HTML_CHARSET>. You can ch
 
  $HTML_CHARSET ||= 'UTF-8'; 
 
-Email messages are controlled per list. In the list control, go to: B<Mail Settings - Advanced Sending Preferences> and select the charset you'd like to use under, B<Default Character Set of Mailings>
+Email messages are controlled per list. In the list control, go to: B<Mail Settings - Advanced Options> and select the charset you'd like to use under, B<Default Character Set of Mailings>
 
 If you do not see the charset you want to set Dada Mail to use, you can add the charset in the Config.pm array, C<@CHARSETS>
 
@@ -993,7 +993,7 @@ SMTP host, like SendGrid (L<http://sendgrid.com>). If you do use SMTP to send me
 
 B<Use One SMTP Connection per Batch (Experimental)>
 
-In, I<Mail Sending - Mass Mailing Preferences>
+In, I<Mail Sending - Mass Mailing Options>
 
 You could also experiment with using B<Amazon SES> for mail sending. See:
 
