--- a/dada/extras/documentation/pod_source/features.pod
+++ b/dada/extras/documentation/pod_source/features.pod
@@ -134,7 +134,7 @@ This screen also gives you the option to embed the various resources used by thi
 
 =head3 Via your Mail Reader
 
-You can also just send messages through your mail reader, to a special List Address. You'll need to install a plugin called, "Dada Bridge" to have this functionality. This plugin also supports Discussion Lists. 
+You can also just send messages through your mail reader, to a special List Address. You'll need to install a plugin called, "Bridge" to have this functionality. This plugin also supports Discussion Lists. 
 
 =head3 Via Beatitude, the Scheduled Mailer
 
